ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formrec
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - demo.azure.com
    secretName: aks-ingress-tls
  rules:
  - host: demo.azure.com
    http:
      paths:
      - path: /formrecognizer
        pathType: Prefix
        backend:
          service: 
            name: backend
            port: 
              number: 8080
      - path: /blob
        pathType: Prefix
        backend:
          service: 
            name: backend
            port: 
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: frontend
            port: 
              number: 80
